--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alice Hsieh
-description: Alice's blog.
+description: Welcome to Alice's HackerLand.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
